assign the apache ownership to the shared folders so user based uploads will work

--- a/VagrantFile
+++ b/VagrantFile
@@ -22,8 +22,8 @@ Vagrant::Config.run do |config|
   
   config.vm.host_name = 'enoch.com'
 
-  config.vm.share_folder "carl", "/home/vagrant/carl", "/Users/mike/Documents/webdev/clients/carl_detorres", :group => "www-data"  
-	config.vm.share_folder "lucian", "/home/vagrant/lucian", "/Users/mike/Documents/webdev/clients/lucian_read", :group => "www-data"
+  config.vm.share_folder "carl", "/home/vagrant/carl", "/Users/mike/Documents/webdev/clients/carl_detorres", :owner => "www-data", :group => "www-data", :extra => "umask=0002"  
+	config.vm.share_folder "lucian", "/home/vagrant/lucian", "/Users/mike/Documents/webdev/clients/lucian_read", :owner => "www-data", :group => "www-data", :extra => "umask=0002"  
 	
 
   # Configuration for the Chef provisioner.
