--- a/VagrantFile
+++ b/VagrantFile
@@ -42,6 +42,12 @@ Vagrant::Config.run do |config|
         "server_repl_password" => "password",
         "server_debian_password" => "password",
         "allow_remote_root" => true
+      },
+      "apache" => {
+        "php" => {
+          "max_upload_size" => "200M",
+          "max_post_size" => "200M"
+        }
       }
     }
     
